src/test/error/class2.lns
class TestAcc {
   let val:int { non, pub };
}
{
   let test = new TestAcc( 1 );
   print( test.$val );  // error
}
